# mtgjson-test

./: README.md  package.json
client/: package.json
server/: .gitignore  Cargo.toml
server/src/: main.rs
server/src/mtgjson/: all_printings.rs  atomics.rs  enums.rs  mana.rs  mod.rs  search.rs
