[package]
name = "server"
version = "0.1.0"
authors = ["Lenqth <nullptr00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-rt = "1.0"
actix-web = { git = "https://github.com/actix/actix-web.git", rev = "master"}

serde = { version = "^1.0.114", features = ["derive"] }
serde_json = "^1.0.41"

nom = "*"